--- a/view.html
+++ b/view.html
@@ -29,7 +29,7 @@
       <tr><th>주소</th><td>서울시 한동구</td></tr>
       <tr><th>포지션</th><td>공격수</td></tr>
       <tr><th>생년월일</th><td>1999-01-01</td></tr>
-      <tr><th>실력 점수</th><td>557</td></tr>
+      <tr><th>지난주 실력 평가 점수</th><td>8</td></tr>
     </table>
     <a href="edit.html" class="btn btn-primary">수정</a>
     <a href="index.html" class="btn btn-secondary">목록으로</a>
