--- a/add.html
+++ b/add.html
@@ -48,6 +48,19 @@
             </div>
 
             <div class="mb-3">
+                <label class="form-label d-block">트레이닝 참석여부</label>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="training" id="trainingYes" value="참석" required>
+                    <label class="form-check-label" for="trainingYes">참석</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="training" id="trainingNo" value="불참" required>
+                    <label class="form-check-label" for="trainingNo">불참</label>
+                </div>
+            </div>
+
+
+            <div class="mb-3">
                 <label for="birth" class="form-label">생년월일</label>
                 <input type="date" class="form-control" id="birth" required max="2025-09-20">
             </div>
@@ -64,7 +77,7 @@
             const form = document.getElementById("memberForm");
 
             form.addEventListener("submit", function (event) {
-                event.preventDefault(); 
+                event.preventDefault();
                 alert("해당 정보로 회원명단에 추가되었습니다.");
                 form.reset();
             });
