--- a/edit.html
+++ b/edit.html
@@ -2,84 +2,95 @@
 <html lang="ko">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>회원 수정 - 한동 축구 클럽</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="my.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>회원 수정 - 한동 축구 클럽</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="my.css">
 </head>
 
 <body class="bg-dark text-white">
 
-  <header class="py-4 text-center bg-black border-bottom border-secondary">
-    <h1 class="fw-bold">한동 축구 클럽</h1>
-  </header>
+    <header class="py-4 text-center bg-black border-bottom border-secondary">
+        <h1 class="fw-bold">한동 축구 클럽</h1>
+    </header>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom border-secondary">
-    <div class="container">
-      <ul class="navbar-nav me-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html">회원 리스트 돌아가기</a></li>
-        <li class="nav-item"><a class="nav-link active" href="edit.html">회원 수정</a></li>
-      </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom border-secondary">
+        <div class="container">
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item"><a class="nav-link" href="index.html">회원 리스트 돌아가기</a></li>
+                <li class="nav-item"><a class="nav-link active" href="edit.html">회원 수정</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="container my-4">
+        <h2 class="mb-3">회원 수정</h2>
+        <form id="editForm">
+            <div class="mb-3">
+                <label for="name" class="form-label">이름</label>
+                <input type="text" class="form-control" id="name" value="홍길동" required>
+            </div>
+
+            <div class="mb-3">
+                <label for="address" class="form-label">주소</label>
+                <input type="text" class="form-control" id="address" value="서울시 한동구" required>
+            </div>
+
+            <div class="mb-3">
+                <label for="position" class="form-label">포지션</label>
+                <select id="position" class="form-select form-select-sm" required>
+                    <option value="">포지션 선택</option>
+                    <option value="골키퍼">골키퍼</option>
+                    <option value="수비수" selected>수비수</option>
+                    <option value="미드필더">미드필더</option>
+                    <option value="공격수">공격수</option>
+                    <option value="심판">심판</option>
+                </select>
+            </div>
+            <div class="mb-3">
+                <label class="form-label d-block">트레이닝 참석여부</label>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="training" id="trainingYes" value="참석" required>
+                    <label class="form-check-label" for="trainingYes">참석</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="training" id="trainingNo" value="불참" required>
+                    <label class="form-check-label" for="trainingNo">불참</label>
+                </div>
+            </div>
+
+            <div class="mb-3">
+                <label for="birth" class="form-label">생년월일</label>
+                <input type="date" class="form-control" id="birth" value="1999-01-01" required max="2025-09-20">
+            </div>
+
+            <div class="mb-3">
+                <label for="score" class="form-label">지난주 경기 평가 점수 (n/10)</label>
+                <input type="number" class="form-control" id="score" value="8" required min="0" max="10">
+            </div>
+
+            <button type="submit" class="btn btn-primary">수정</button>
+            <a href="view.html" class="btn btn-secondary">취소</a>
+        </form>
+
+        <script>
+            const editForm = document.getElementById("editForm");
+
+            editForm.addEventListener("submit", function (event) {
+                event.preventDefault();
+
+                if (!editForm.checkValidity()) {
+                    return; // 유효성 검사 실패 시 멈춤
+                }
+
+                if (confirm("수정하시겠습니까?")) {
+                    alert("수정이 완료되었습니다.");
+                    editForm.reset();
+                }
+            });
+        </script>
     </div>
-  </nav>
-
-  <div class="container my-4">
-    <h2 class="mb-3">회원 수정</h2>
-    <form id="editForm">
-      <div class="mb-3">
-        <label for="name" class="form-label">이름</label>
-        <input type="text" class="form-control" id="name" value="홍길동" required>
-      </div>
-
-      <div class="mb-3">
-        <label for="address" class="form-label">주소</label>
-        <input type="text" class="form-control" id="address" value="서울시 한동구" required>
-      </div>
-
-      <div class="mb-3">
-        <label for="position" class="form-label">포지션</label>
-        <select id="position" class="form-select form-select-sm" required>
-          <option value="">포지션 선택</option>
-          <option value="골키퍼">골키퍼</option>
-          <option value="수비수" selected>수비수</option>
-          <option value="미드필더">미드필더</option>
-          <option value="공격수">공격수</option>
-          <option value="심판">심판</option>
-        </select>
-      </div>
-
-      <div class="mb-3">
-        <label for="birth" class="form-label">생년월일</label>
-        <input type="date" class="form-control" id="birth" value="1999-01-01" required max="2025-09-20">
-      </div>
-
-      <div class="mb-3">
-        <label for="score" class="form-label">지난주 경기 평가 점수 (n/10)</label>
-        <input type="number" class="form-control" id="score" value="8" required min="0" max="10">
-      </div>
-
-      <button type="submit" class="btn btn-primary">수정</button>
-      <a href="view.html" class="btn btn-secondary">취소</a>
-    </form>
-
-    <script>
-      const editForm = document.getElementById("editForm");
-
-      editForm.addEventListener("submit", function (event) {
-        event.preventDefault();
-
-        if (!editForm.checkValidity()) {
-          return; // 유효성 검사 실패 시 멈춤
-        }
-
-        if (confirm("수정하시겠습니까?")) {
-          alert("수정이 완료되었습니다.");
-          editForm.reset();
-        }
-      });
-    </script>
-  </div>
 </body>
 
 </html>
